--- a/dynamicApplication.html
+++ b/dynamicApplication.html
@@ -14,7 +14,7 @@
     </head>
     <body onload="greet()">
         <button onclick="alert('Hello, world')">CLICK</button>
-        <p id="text">This is the first HTML, CSS and JavaScript.</p>
+        <p id="text">This is the first HTML, CSS and JavaScript fusion.</p>
         <button id="change">Change paragraph</button>
         <button id="click">Internal JavaScript Click</button>
 
@@ -42,11 +42,11 @@
             const change_button = document.getElementById('change');
             
             change_button.onclick = function(){
-                if (document.getElementById('text').innerHTML == "This is the first HTML, CSS and JavaScript."){
+                if (document.getElementById('text').innerHTML == "This is the first HTML, CSS and JavaScript fusion."){
                     document.getElementById('text').innerHTML = "This is a changed paragraph.";
                 }
                 else{
-                    document.getElementById('text').innerHTML = "This is the first HTML, CSS and JavaScript.";
+                    document.getElementById('text').innerHTML = "This is the first HTML, CSS and JavaScript fusion.";
                 }
             }
         }
